modif link style.css

--- a/Menu_La_palette_du_goût.html
+++ b/Menu_La_palette_du_goût.html
@@ -2,7 +2,7 @@
     <html lang="fr">
         <head>
             <meta charset="UTF-8"/>
-            <link rel="stylesheet" href="style.css"/>
+            <link rel="stylesheet" href="sass/style.css"/>
             <meta name="viewport" content="width=device-width, initial-scale=1"><!--Règles responsive-->
             <!--Source des symboles utilisés Font Awesome-->
             <script src="https://kit.fontawesome.com/dccdede72c.js" crossorigin="anonymous"></script>
