--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="fr">
         <head>
             <meta charset="UTF-8"/>
-            <link rel="stylesheet" href="./sass/style.css"/>
+            <link rel="stylesheet" href="./style.css"/>
             <meta name="viewport" content="width=device-width, initial-scale=1"><!--Règles responsive-->
             <!--Source des symboles utilisés Font Awesome-->
             <script src="https://kit.fontawesome.com/dccdede72c.js" crossorigin="anonymous"></script>
@@ -30,117 +30,117 @@
                         </form>
                     </div>
                     <div class="concept">
-                        <p class="titre_concept">Réservez le menu qui vous convient</p>
+                        <h1>Réservez le menu qui vous convient</h1>
                         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                        <div class="btn pres_restaurants">
+                        <div class="button pres_restaurants">
                             <a href="#presentation_restaurants">Explorez nos restaurants</a>
                         </div>
                     </div>
                 </section>
-                <section id="fonctionnement_site">
-                    <p class="titre1_accueil">Fonctionnement</p>
-                    <div class="fonctionnement">
-                        <div class="btn_fonctionnement">
+                <section id="website_functionalities">
+                    <h1>Fonctionnement</h1>
+                    <div class="functionalities">
+                        <div class="button_functionalities">
                             <a href="#">
-                            <form method="post" action="btn_choix_restaurant.php">
-                                <div class="num_btn_fonctionnement">1</div>
-                                <div class="btn_fonctionnement_instruction">
+                            <form method="post" action="button_choice_restaurant.php">
+                                <div class="number_button_functionalities">1</div>
+                                <div class="button_functionalities_instruction">
                                     <i class="fas fa-mobile-alt"></i>
-                                    <input type="submit" name="btn_choix_restaurant" class="btn_choix" value="Choisissez un restaurant"/>   
+                                    <input type="submit" name="button_choice_restaurant" class="button_choice" value="Choisissez un restaurant"/>   
                                 </div>
                             </form>
                             </a>
                         </div>
-                        <form method="post" action="btn_choix_menu.php">
-                            <div class="btn_fonctionnement">
-                                <div class="num_btn_fonctionnement">2</div>
-                                <div class="btn_fonctionnement_instruction">
-                                    <a href="#">
-                                        <i class="fas fa-list-ul"></i>
-                                        <input type="submit" name="btn_choix_menu" class="btn_choix" value="Composez votre menu"/>
-                                    </a>
+                        <div class="button_functionalities">
+                            <a href="#">
+                            <form method="post" action="button_choice_menu.php">
+                                <div class="number_button_functionalities">2</div>
+                                <div class="button_functionalities_instruction">
+                                    <i class="fas fa-list-ul"></i>
+                                    <input type="submit" name="button_choice_menu" class="button_choice" value="Composez votre menu"/>
                                 </div>
-                            </div>
-                        </form>
-                        <form method="post" action="btn_reservation.php">
-                            <div class="btn_fonctionnement">
-                                <div class="num_btn_fonctionnement">3</div>
-                                <div class="btn_fonctionnement_instruction">
-                                    <a href="#">
-                                        <i class="fas fa-store"></i>
-                                        <input type="submit" name="btn_reservation" class="btn_choix" value="Dégustez au restaurant"/>
-                                    </a>
+                            </form>
+                            </a>
+                        </div>
+                        <div class="button_functionalities">
+                            <a href="#">
+                            <form method="post" action="button_reservation.php">
+                                <div class="number_button_functionalities">3</div>
+                                <div class="button_functionalities_instruction">
+                                    <i class="fas fa-store"></i>
+                                    <input type="submit" name="button_reservation" class="button_choice" value="Dégustez au restaurant"/>
                                 </div>
-                            </div>
-                        </form>
+                            </form>
+                            </a>
+                        </div>
                     </div>
                 </section>
                 <section id="presentation_restaurants">
-                    <p class="titre1_accueil">Restaurants</p>
+                    <h1>Restaurants</h1>
                     <div id="presentation_restaurants_cartes">
-                        <div class="carte_restaurant">
+                        <div class="block_carte_restaurant">
                             <a href="./Menu_La_palette_du_gout.html" title="Accéder au menu" target="_blank">
-                            <div class="carte_restaurant_photo">
+                            <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant La palette du goût"/>
-                                <div class="icon_nouveau">Nouveau</div>
-                            </div>
-                            <div class="carte_restaurant_infos">
-                                <div class="carte_restaurant_infos_nom">
-                                    <p class="titres2_accueil">La palette du goût</p>
-                                    <p>Ménilmontant</p>
-                                </div>
-                                <div class="btn_like">
-                                    <i class="far fa-heart"></i>
+                                <div class="icon_new">Nouveau</div>
+                                <div class="carte_restaurant_infos">
+                                    <div class="carte_restaurant_infos_name">
+                                        <h2>La palette du goût</h2>
+                                        <p>Ménilmontant</p>
+                                    </div>
+                                    <div class="button_like">
+                                        <i class="far fa-heart"></i>
+                                    </div>
                                 </div>
                             </div>
                             </a>
                         </div>
-                        <div class="carte_restaurant">
+                        <div class="block_carte_restaurant">
                             <a href="" title="Accéder au menu" target="_blank">
-                            <div class="carte_restaurant_photo">
+                            <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo restaurant La note enchantée"/>
-                                <div class="icon_nouveau">Nouveau</div>
-                            </div>
-                            <div class="carte_restaurant_infos">
-                                <div class="carte_restaurant_infos_nom">
-                                    <p class="titres2_accueil">La note enchantée</p>
-                                    <p>charonne</p>
-                                </div>
-                                <div class="btn_like">
-                                    <i class="far fa-heart"></i>
+                                <div class="icon_new">Nouveau</div>
+                                <div class="carte_restaurant_infos">
+                                    <div class="carte_restaurant_infos_name">
+                                        <h2>La note enchantée</h2>
+                                        <p>charonne</p>
+                                    </div>
+                                    <div class="button_like">
+                                        <i class="far fa-heart"></i>
+                                    </div>
                                 </div>
                             </div>
                             </a>
                         </div>
-                        <div class="carte_restaurant">
+                        <div class="block_carte_restaurant">
                             <a href="" title="Accéder au menu" target="_blank">
-                            <div class="carte_restaurant_photo">
+                            <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo restaurant À la française"/>
-                            </div>
-                            <div class="carte_restaurant_infos">
-                                <div class="carte_restaurant_infos_nom">
-                                    <p class="titres2_accueil">À la française</p>
-                                    <p>Cité Rouge</p>
-                                </div>
-                                <div class="btn_like">
-                                    <i class="far fa-heart"></i>
+                                <div class="carte_restaurant_infos">
+                                    <div class="carte_restaurant_infos_name">
+                                        <h2>À la française</h2>
+                                        <p>Cité Rouge</p>
+                                    </div>
+                                    <div class="button_like">
+                                        <i class="far fa-heart"></i>
+                                    </div>
                                 </div>
                             </div>
                             </a>
                         </div>
-                        <div class="carte_restaurant">
+                        <div class="block_carte_restaurant">
                             <a href="" title="Accéder au menu" target="_blank">
-                            <div class="carte_restaurant_photo">
+                            <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo restaurant Le délice des sens"/>
-                            </div>
-                            <div class="carte_restaurant_infos">
-                                <div class="carte_restaurant_infos_nom">
-                                    <p class="titres2_accueil">Le délice des sens</p>
-                                    <p>Folie Méricourt</p>
+                                <div class="carte_restaurant_infos">
+                                    <div class="carte_restaurant_infos_name">
+                                        <h2>Le délice des sens</h2>
+                                        <p>Folie Méricourt</p>
+                                    </div>
+                                    <div class="button_like">
+                                        <i class="far fa-heart"></i>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="btn_like">
-                                <i class="far fa-heart"></i>
                             </div>
                             </a>
                         </div>
