css menu animation entrées et arrondi menu

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
         </head>
         <body>
+            <div class="loader">ohmyfood</div>
             <div id="main_page">
                 <header>
                     <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood"/>
@@ -90,6 +91,7 @@
                                     </div>
                                     <div class="button_like">
                                         <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </div>
