--- a/Menu_La_palette_du_gout.html
+++ b/Menu_La_palette_du_gout.html
@@ -17,7 +17,7 @@
         <body>
             <div id="main_page">
                 <header class="header_menu">
-                    <div class="button_back_accueil">
+                    <div class="button_back_welcome">
                         <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
                     </div>
                     <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood"/>
@@ -25,91 +25,101 @@
                 <section id="presentation_menu">
                     <img src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant La palette du goût"/>
                     <div id="container_menu">
-                    <div class="presentation_menu_nom_restaurant"
-                        <h1>La palette du goût</h1>
-                        <div class="button_like">
-                            <i class="far fa-heart"></i>
-                        <div>
-                    </div>
-                    <div class="menu_restaurant">
-                        <div class="menu">
-                            <p class="menu_section">entrées</p>
-                            <div class="plat">
-                                <div class="plat_intitulé">
-                                    <span>Fricassée d'escargot</span>
-                                    <p>Au piment d'espelette</p>
-                                </div>
-                                <div class="plat_prix">25€</div>
-                            </div>
-                            <div class="plat">
-                                <div class="plat_intitulé">
-                                    <span>Foie gras de canard mi-cuit</span>
-                                    <p>Et ses copeaux de truffe noire</p>
-                                </div>
-                                <div class="plat_prix">35€</div>
-                            </div>
-                            <div class="plat">
-                                <div class="plat_intitulé">
-                                    <span>Oeuf au plat</span>
-                                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                                </div>
-                                <div class="plat_prix">20€</div>
+                        <div class="presentation_menu_name_restaurant">
+                            <h1>La palette du goût</h1>
+                            <div class="button_like">
+                                <i class="far fa-heart"></i>
                             </div>
                         </div>
-                        <div class="menu">
-                            <p class="menu_section">plats</p>
-                            <div class="plat">
-                                <div class="plat_intitulé">
-                                    <span>Filet de boeuf aux herbes</span>
-                                    <p>Accompagné de sa ribambelle de légumes</p>
+                        <div class="menu_restaurant">
+                            <div class="menu">
+                                <h2>entrées</h2>
+                                <div class="underline"></div>
+                                <div class="dish_check">
+                                    <div class="dish">
+                                        <div class="dish_name">
+                                            <span>Fricassée d'escargot</span>
+                                            <p>Au piment d'espelette</p>
+                                        </div>
+                                        <div class="dish_price">25€</div>
+                                    </div>
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
-                                <div class="plat_prix">40€</div>
-                            </div>
-                            <div class="plat">
-                                <div class="plat_intitulé">
-                                    <span>Parmentier de queue de boeuf</span>
-                                    <p>À la truffe noire sur sa purée de panais</p>
+                                <div class="dish_check">
+                                    <div class="dish">
+                                        <div class="dish_name">
+                                            <span>Foie gras de canard mi-cuit</span>
+                                            <p>Et ses copeaux de truffe noire</p>
+                                        </div>
+                                        <div class="dish_price">35€</div>
+                                    </div>
                                 </div>
-                                <div class="plat_prix">35€</div>
-                            </div>
-                            <div class="plat">
-                                <div class="plat_intitulé">
-                                    <span>Filet de turbot</span>
-                                    <p>Aux agrumes</p>
+                                <div class="dish_check">
+                                    <div class="dish">
+                                        <div class="dish_name">
+                                            <span>Oeuf au plat</span>
+                                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                                        </div>
+                                        <div class="dish_price">20€</div>
+                                    </div>
                                 </div>
-                                <div class="plat_prix">44€</div>
                             </div>
+                            <div class="menu">
+                                <h2>plats</h2>
+                                <div class="underline"></div>
+                                <div class="dish">
+                                    <div class="dish_name">
+                                        <span>Filet de boeuf aux herbes</span>
+                                        <p>Accompagné de sa ribambelle de légumes</p>
+                                    </div>
+                                    <div class="dish_price">40€</div>
+                                </div>
+                                <div class="dish">
+                                    <div class="dish_name">
+                                        <span>Parmentier de queue de boeuf</span>
+                                        <p>À la truffe noire sur sa purée de panais</p>
+                                    </div>
+                                    <div class="dish_price">35€</div>
+                                </div>
+                                <div class="dish">
+                                    <div class="dish_name">
+                                        <span>Filet de turbot</span>
+                                        <p>Aux agrumes</p>
+                                    </div>
+                                    <div class="dish_price">44€</div>
+                                </div>
+                            </div>
+                            <div class="menu">
+                                <h2>desserts</h2>
+                                <div class="underline"></div>
+                                <div class="dish">
+                                    <div class="dish_name">
+                                        <span>Paris-Brest</span>
+                                        <p>Revisité</p>
+                                    </div>
+                                    <div class="dish_price">18€</div>
+                                </div>
+                                <div class="dish">
+                                    <div class="dish_name">
+                                        <span>Macaron au chocolat d'exception </span>
+                                        <p>Et glace à la vanille de Madagascar</p>
+                                    </div>
+                                    <div class="dish_price">22€</div>
+                                </div>
+                                <div class="dish">
+                                    <div class="dish_name">
+                                        <span>Mousse au chocolat </span>
+                                        <p>Au piment d'Espelette et à la truffe noire</p>
+                                    </div>
+                                    <div class="dish_price">23€</div>
+                                </div>
+                            </div>
+                            <form method="post" action="button_commander.php">
+                                <p>
+                                    <input type="submit" name="button_commande" class="button commander" value="Commander"/>
+                                </p>
+                            </form>
                         </div>
-                        <div class="menu">
-                            <p class="menu_section">desserts</p>
-                            <div class="plat">
-                                <div class="plat_intitulé">
-                                    <span>Paris-Brest</span>
-                                    <p>Revisité</p>
-                                </div>
-                                <div class="plat_prix">18€</div>
-                            </div>
-                            <div class="plat">
-                                <div class="plat_intitulé">
-                                    <span>Macaron au chocolat d'exception </span>
-                                    <p>Et glace à la vanille de Madagascar</p>
-                                </div>
-                                <div class="plat_prix">22€</div>
-                            </div>
-                            <div class="plat">
-                                <div class="plat_intitulé">
-                                    <span>Mousse au chocolat </span>
-                                    <p>Au piment d'Espelette et à la truffe noire</p>
-                                </div>
-                                <div class="plat_prix">23€</div>
-                            </div>
-                        </div>
-                        <form method="post" action="button_commander.php">
-                            <p>
-                                <input type="submit" name="button_commande" class="button commander" value="Commander"/>
-                            </p>
-                        </form>
-                    </div>
                     </div>
                 </section>
                 <footer>
