ellipsis ok, apparition dishes, fill coeur v1

--- a/Menu_La_palette_du_gout.html
+++ b/Menu_La_palette_du_gout.html
@@ -35,85 +35,111 @@
                             <div class="menu">
                                 <h2>entrées</h2>
                                 <div class="underline"></div>
-                                <div class="dish_check">
-                                    <div class="dish">
-                                        <div class="dish_name">
-                                            <span>Fricassée d'escargot</span>
-                                            <p>Au piment d'espelette</p>
+                                <div class="dish_block entree">
+                                    <div class="check">
+                                        <i class="far fa-check-circle"></i>
+                                        <div class="dish">
+                                            <div class="dish_name">
+                                                <p class="span">Fricassée d'escargot</p>
+                                                <p>Au piment d'espelette</p>
+                                            </div>
+                                            <div class="dish_price">25€</div>
                                         </div>
-                                        <div class="dish_price">25€</div>
                                     </div>
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
-                                <div class="dish_check">
-                                    <div class="dish">
-                                        <div class="dish_name">
-                                            <span>Foie gras de canard mi-cuit</span>
-                                            <p>Et ses copeaux de truffe noire</p>
+                                    <div class="check">
+                                        <i class="far fa-check-circle"></i>
+                                        <div class="dish">
+                                            <div class="dish_name">
+                                                <p class="span">Foie gras de canard mi-cuit</p>
+                                                <p>Et ses copeaux de truffe noire</p>
+                                            </div>
+                                            <div class="dish_price">35€</div>
                                         </div>
-                                        <div class="dish_price">35€</div>
                                     </div>
-                                </div>
-                                <div class="dish_check">
-                                    <div class="dish">
-                                        <div class="dish_name">
-                                            <span>Oeuf au plat</span>
-                                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                                    <div class="check">
+                                        <i class="far fa-check-circle"></i>
+                                        <div class="dish">
+                                            <div class="dish_name">
+                                                <p class="span">Oeuf au plat</p>
+                                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                                            </div>
+                                            <div class="dish_price">20€</div>
                                         </div>
-                                        <div class="dish_price">20€</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="menu">
                                 <h2>plats</h2>
                                 <div class="underline"></div>
-                                <div class="dish">
-                                    <div class="dish_name">
-                                        <span>Filet de boeuf aux herbes</span>
-                                        <p>Accompagné de sa ribambelle de légumes</p>
+                                <div class="dish_block meal">
+                                    <div class="check">
+                                        <i class="far fa-check-circle"></i>
+                                        <div class="dish">
+                                            <div class="dish_name">
+                                                <p class="span">Filet de boeuf aux herbes</p>
+                                                <p>Accompagné de sa ribambelle de légumes</p>
+                                            </div>
+                                            <div class="dish_price">40€</div>
+                                        </div>
                                     </div>
-                                    <div class="dish_price">40€</div>
-                                </div>
-                                <div class="dish">
-                                    <div class="dish_name">
-                                        <span>Parmentier de queue de boeuf</span>
-                                        <p>À la truffe noire sur sa purée de panais</p>
+                                    <div class="check">
+                                        <i class="far fa-check-circle"></i>
+                                        <div class="dish">
+                                            <div class="dish_name">
+                                                <p class="span">Parmentier de queue de boeuf</p>
+                                                <p>À la truffe noire sur sa purée de panais</p>
+                                            </div>
+                                            <div class="dish_price">35€</div>
+                                        </div>
                                     </div>
-                                    <div class="dish_price">35€</div>
-                                </div>
-                                <div class="dish">
-                                    <div class="dish_name">
-                                        <span>Filet de turbot</span>
-                                        <p>Aux agrumes</p>
+                                    <div class="check">
+                                        <i class="far fa-check-circle"></i>
+                                        <div class="dish">
+                                            <div class="dish_name">
+                                                <p class="span">Filet de turbot</p>
+                                                <p>Aux agrumes</p>
+                                            </div>
+                                            <div class="dish_price">44€</div>
+                                        </div>
                                     </div>
-                                    <div class="dish_price">44€</div>
                                 </div>
                             </div>
                             <div class="menu">
                                 <h2>desserts</h2>
                                 <div class="underline"></div>
-                                <div class="dish">
-                                    <div class="dish_name">
-                                        <span>Paris-Brest</span>
-                                        <p>Revisité</p>
+                                <div class="dish_block dessert">
+                                    <div class="check">
+                                        <i class="far fa-check-circle"></i>
+                                        <div class="dish">
+                                            <div class="dish_name">
+                                                <p class="span">Paris-Brest</p>
+                                                <p>Revisité</p>
+                                            </div>
+                                            <div class="dish_price">18€</div>
+                                        </div>
                                     </div>
-                                    <div class="dish_price">18€</div>
-                                </div>
-                                <div class="dish">
-                                    <div class="dish_name">
-                                        <span>Macaron au chocolat d'exception </span>
-                                        <p>Et glace à la vanille de Madagascar</p>
+                                    <div class="check">
+                                        <i class="far fa-check-circle"></i>
+                                        <div class="dish">
+                                            <div class="dish_name">
+                                                <p class="span">Macaron au chocolat d'exception </p>
+                                                <p>Et glace à la vanille de Madagascar</p>
+                                            </div>
+                                            <div class="dish_price">22€</div>
+                                        </div>
                                     </div>
-                                    <div class="dish_price">22€</div>
-                                </div>
-                                <div class="dish">
-                                    <div class="dish_name">
-                                        <span>Mousse au chocolat </span>
-                                        <p>Au piment d'Espelette et à la truffe noire</p>
+                                    <div class="check">
+                                        <i class="far fa-check-circle"></i>
+                                        <div class="dish">
+                                            <div class="dish_name">
+                                                <p class="span">Mousse au chocolat </p>
+                                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                            </div>
+                                            <div class="dish_price">23€</div>
+                                        </div>
                                     </div>
-                                    <div class="dish_price">23€</div>
                                 </div>
-                            </div>
+                            </div> 
                             <form method="post" action="button_commander.php">
                                 <p>
                                     <input type="submit" name="button_commande" class="button commander" value="Commander"/>
@@ -122,8 +148,8 @@
                         </div>
                     </div>
                 </section>
-                <footer>
-                </a></p>
+            </div>
+            <footer>
                 <p class="logo">ohmyfood</p>
                 <p><a href="#">
                     <i class="fas fa-utensils"></i>
@@ -136,10 +162,9 @@
                 <p><a href="#">
                     Mentions légales
                 </a></p>
-                <p><a href="#">
+                <p><a href="mailto:xxx@yopmail.com">
                     Contact
                 </a></p>
-                </footer>
-            </div>
+            </footer>
         </body>
         
