--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <div class="number_button_functionalities">1</div>
                                 <div class="button_functionalities_instruction">
                                     <i class="fas fa-mobile-alt"></i>
-                                    <input type="submit" name="button_choice_restaurant" class="button_choice" value="Choisissez un restaurant"/>   
+                                    <button type="button" class="button_choice">Choisissez un restaurant</button>   
                                 </div>
                             </form>
                             </a>
@@ -105,7 +105,7 @@
                                 <div class="carte_restaurant_infos">
                                     <div class="carte_restaurant_infos_name">
                                         <h2>La note enchantée</h2>
-                                        <p>charonne</p>
+                                        <p>Charonne</p>
                                     </div>
                                     <div class="button_like">
                                         <i class="far fa-heart"></i>
@@ -150,21 +150,20 @@
                 </section>
             </div>
             <footer>
-            </a></p>
-                <p class="logo">ohmyfood</p>
-                <p><a href="#">
-                    <i class="fas fa-utensils"></i>
-                    Proposer un restaurant
-                </a></p>
-                <p><a href="#">
-                    <i class="fas fa-hands-helping"></i>
-                    Devenir partenaire
-                </a></p>
-                <p><a href="#">
-                    Mentions légales
-                </a></p>
-                <p><a href="#">
-                    Contact
-                </a></p>
+                    <p class="logo">ohmyfood</p>
+                    <p><a href="#">
+                        <i class="fas fa-utensils"></i>
+                        Proposer un restaurant
+                    </a></p>
+                    <p><a href="#">
+                        <i class="fas fa-hands-helping"></i>
+                        Devenir partenaire
+                    </a></p>
+                    <p><a href="#">
+                        Mentions légales
+                    </a></p>
+                    <p><a href="mailto:xxx@yopmail.com">
+                        Contact
+                    </a></p>
             </footer>
         </body>
