--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
         </head>
         <body>
+            <div class="page"></div>
             <div class="loader">ohmyfood</div>
             <div id="main_page">
                 <header>
