--- a/Menu_La_palette_du_gout.html
+++ b/Menu_La_palette_du_gout.html
@@ -4,7 +4,6 @@
             <meta charset="UTF-8"/>
             <link rel="stylesheet" href="./style.css"/>
             <meta name="viewport" content="width=device-width, initial-scale=1"><!--Règles responsive-->
-            <!--Source des symboles utilisés Font Awesome-->
             <script src="https://kit.fontawesome.com/dccdede72c.js" crossorigin="anonymous"></script>
             <title>OhMyFood La palette du goût</title>
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -148,23 +147,27 @@
                         </div>
                     </div>
                 </section>
-            </div>
             <footer>
                 <p class="logo">ohmyfood</p>
-                <p><a href="#">
-                    <i class="fas fa-utensils"></i>
-                    Proposer un restaurant
-                </a></p>
-                <p><a href="#">
-                    <i class="fas fa-hands-helping"></i>
-                    Devenir partenaire
-                </a></p>
-                <p><a href="#">
-                    Mentions légales
-                </a></p>
-                <p><a href="mailto:xxx@yopmail.com">
-                    Contact
-                </a></p>
+                <div class="footer_block">
+                    <p><a href="#">
+                        <i class="fas fa-utensils"></i>
+                        Proposer un restaurant
+                    </a></p>
+                    <p><a href="#">
+                        <i class="fas fa-hands-helping"></i>
+                        Devenir partenaire
+                    </a></p>
+                </div>
+                <div class="footer_block">
+                    <p><a href="#">
+                        Mentions légales
+                    </a></p>
+                    <p><a href="mailto:xxx@yopmail.com">
+                        Contact
+                    </a></p>
+                </div>
             </footer>
+            </div>
         </body>
         
