--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                         <p>Charonne</p>
                                     </div>
                                     <div class="button_like">
-                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </div>
@@ -152,19 +152,25 @@
             </div>
             <footer>
                     <p class="logo">ohmyfood</p>
-                    <p><a href="#">
-                        <i class="fas fa-utensils"></i>
-                        Proposer un restaurant
-                    </a></p>
-                    <p><a href="#">
-                        <i class="fas fa-hands-helping"></i>
-                        Devenir partenaire
-                    </a></p>
-                    <p><a href="#">
-                        Mentions légales
-                    </a></p>
-                    <p><a href="mailto:xxx@yopmail.com">
-                        Contact
-                    </a></p>
+                    <div class="footer">
+                    <div class="footer_block">
+                        <p><a href="#">
+                            <i class="fas fa-utensils"></i>
+                            Proposer un restaurant
+                        </a></p>
+                        <p><a href="#">
+                            <i class="fas fa-hands-helping"></i>
+                            Devenir partenaire
+                        </a></p>
+                    </div>
+                    <div class="footer_block last">
+                        <p><a href="#">
+                            Mentions légales
+                        </a></p>
+                        <p><a href="mailto:xxx@yopmail.com">
+                            Contact
+                        </a></p>
+                    </div>
+                    </div>
             </footer>
         </body>
